crates/wtg/tests/snapshots/integration__integration_identify_tag.snap
---
source: crates/wtg/tests/integration.rs
expression: snapshot
---
result_type: tag
entry_point: ~
commit_message: ~
commit_author: ~
has_commit_url: true
has_pr: false
has_issue: false
release_name: ~
release_is_semver: true
tag_name: v0.1.0
file_path: ~
previous_authors_count: ~
